Remove footer css-fixed property
... but make sure that the footer still will be
shown at the bottom of the page when there is
no scrollbar

--- a/public/sass/bento/footer.scss
+++ b/public/sass/bento/footer.scss
@@ -1,10 +1,17 @@
-html {
-  position: relative;
-  min-height: 100%;
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
-body {
+
+#wrapper {
+  min-height: 100%;
+  position: relative;
+}
+
+#wrapper > :nth-last-child(2) {
   /* Margin bottom by footer height */
-  margin-bottom: $baseFontSize*1.5+15px;
+  padding-bottom: $baseFontSize*1.5+15px;
 }
 
 .footer {
@@ -20,8 +27,9 @@ body {
 
   height: $baseFontSize*1.5+15px;
   background-color: $bodyBackground;
-  position: fixed;
+  position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
 }
    
